--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,11 +7,7 @@
     <string name="title_solicitudes">Solicitudes</string>
     <string name="title_perfil">Perfil</string>
 
-    <string name="bienvenida_iniciar_sesion">Iniciar Sesión</string>
-    <string name="bienvenida_crear_cuenta">Crear Cuenta</string>
-    <string name="bienvenida_text1">Encuentra todos los profesores de todas las materias.</string>
-    <string name="bienvenida_text2">Gratis y sin salir de tu casa al precio que tu eligas.</string>
-
-    <string name="hello_blank_fragment">Hello blank fragment 1</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 
 </resources>
